--- a/files/mlp.ipynb
+++ b/files/mlp.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "states = ['CT']\n",
+    "states = ['CT', 'NJ']\n",
     "for s in states :\n",
     "    print(s)"
    ]
@@ -514,13 +514,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false
-   },
+   "metadata": {},
    "source": [
     "Each hidden node captures one or more features (local structures) that help classify the number.\n",
-    "The code below looks at the weights applied to inputs from the hidden layer to the *output* layer. This shows how activation of the hidden nodes influences the prediction. For example, if the first hidden node is activated, what number (0,1, or 7) would be predicted?"
+    "The code below looks at the weights applied to inputs from the hidden layer to the *output* layer. This shows how activation of the hidden nodes influences the prediction (higher values = more confidence). For example, if the first hidden node is activated, what number (0,1, or 7) would be predicted?"
    ]
   },
   {
@@ -561,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
